package com.hdapp.myapplication.core

object TestTags {
    const val LOGIN_USERNAME_FIELD = "usernameField"
    const val LOGIN_PASSWORD_FIELD = "passwordField"
    const val LOGIN_BUTTON = "loginButton"
    const val LOGIN_ERROR_MESSAGE = "errorMessage"
    const val LOGIN_LOGO = "loginLogo"
    const val DASHBOARD_LANGUAGE_SWITCH = "dashboardLanguageSwitch"
    const val DASHBOARD_SEARCH_FIELD = "dashboardSearchField"
    const val DASHBOARD_PRODUCT_LIST = "dashboardProductList"
}
